# grok-critic-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: development-plan.xml  knowledge-graph.xml  operational-packets.xml  requirements.xml  technology.xml  verification-plan.xml
skill/: SKILL.md
src/grok_critic/: __init__.py  api_client.py  config.py  critic.py  server.py
tests/: test_api_client.py  test_config.py  test_critic.py  test_server.py
