[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grok-critic-mcp"
version = "1.4.0"
description = "MCP server for critical code review via grok-4.20-multi-agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[project.scripts]
grok-critic = "grok_critic.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_critic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
